# vir-bot

./: .gitignore  AGENTS.md  CLAUDE.md  MEMORY_ARCHITECTURE.md  MEMORY_IMPROVEMENT_PLAN.md  MEMORY_SYSTEM_FIX.md  PHASE1_COMPLETION.md  Phase 2 评测系统实现计划 md.md  QUICK_FIX_GUIDE.md  QUICK_START_QUESTION_MEMORY.md  README.md  config.yaml  pyproject.toml  requirements.txt  test_actual_request.py  test_deepseek.py  test_personality_consistency.py  vir-bot 记忆系统渐进式改造计划.md  vir-bot 记忆系统渐进式改造进度.md  记录事项.md  记忆架构分层详解.md
.claude/: settings.local.json
data/characters/: default.json
data/memory/: _semantic_memory_test.json  episodic_memory.json  question_memory.json  semantic_memory.json  test_semantic_temp.json
data/wiki/: README.md
docs/: ARCHITECTURE.md  DISTILLATION_PLAN.md  README.md  memory-system-usage.md  主动消息系统实现框架.md  牵挂驱动型AI伴侣主动消息方案.md  记忆架构分层详解.md
docs/archive/: AI_Robot_Project.md  IMPROVEMENT_PLAN.md  logicstream.md  vir-bot 记忆系统渐进式改造计划.md  vir-bot 记忆系统渐进式改造进度.md
tests/: conftest.py  debug_memory.py  test_live_service.py  test_phase4_composer.py  test_phase6.py  test_phase8.py  test_proactive_simple.py
tests/eval/: __init__.py  __main__.py  baseline.json  baseline.md  baseline_mock.json  baseline_real.json  benchmark.py  history.json  metrics.py  report.json  runner.py
tests/integration/: test_pipeline_memory.py
tests/unit/: test_composer.py  test_eval_metrics.py  test_feedback_handler.py  test_graph_store.py  test_memory_manager.py  test_quality_gate.py  test_reranker.py  (+3 more)
vir-bot/: __init__.py  config.py  main.py
vir_bot/: config.py  main.py
(+96 files in other folders)
